--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -13,9 +13,13 @@ $(1)_OBJ_DIR := obj/$(1)
 
 $(1)_CFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.c")
 $(1)_SFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.S")
+$(1)_HSFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hs")
+$(1)_HCFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hc")
 
 $(1)_COBJS := $$(patsubst $$($(1)_SRC_DIR)%.c,$$($(1)_OBJ_DIR)%.o,$$($(1)_CFILES))
 $(1)_SOBJS := $$(patsubst $$($(1)_SRC_DIR)%.S,$$($(1)_OBJ_DIR)%.o,$$($(1)_SFILES))
+$(1)_HSOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hs,$$($(1)_OBJ_DIR)%.o,$$($(1)_HSFILES))
+$(1)_HCOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hc,$$($(1)_OBJ_DIR)%.o,$$($(1)_HCFILES))
 $(1)_OBJS := $$($(1)_SOBJS) $$($(1)_COBJS)
 
 $(1)_BIN := $$($(1)_OBJ_DIR)/$(1)
