Re-arrange nemu Makefile

--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -2,9 +2,10 @@ nemu_CFLAGS_EXTRA := -ggdb3 -O3
 $(eval $(call make_common_rules,nemu,$(nemu_CFLAGS_EXTRA)))
 
 nemu_LDFLAGS := -lreadline
+nemu_GHCFLAGS = --make -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp -odir /tmp
 
 $(nemu_BIN): $(nemu_OBJS) $(nemu_HSFILES) $(nemu_HCFILES)
-	$(call make_command, $(GHC) --make -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp, $(nemu_LDFLAGS), ld $@, $^)
+	$(call make_command, $(GHC), $(nemu_GHCFLAGS) $(nemu_LDFLAGS), ld $@, $^)
 	$(call git_commit, "compile NEMU")
 
 
