--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -2,7 +2,7 @@ nemu_CFLAGS_EXTRA := -ggdb3 -O3
 $(eval $(call make_common_rules,nemu,$(nemu_CFLAGS_EXTRA)))
 
 nemu_LDFLAGS := -lreadline
-nemu_GHCFLAGS = --make -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp -odir /tmp
+nemu_GHCFLAGS = --make -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp -odir /tmp -I$(nemu_INC_DIR) -I$(LIB_COMMON_DIR)
 
 $(nemu_BIN): $(nemu_OBJS) $(nemu_HSFILES) $(nemu_HCFILES)
 	$(call make_command, $(GHC), $(nemu_GHCFLAGS) $(nemu_LDFLAGS), ld $@, $^)
