--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -2,7 +2,7 @@
 define make_command
 @echo + $(3)
 @mkdir -p $(@D)
-@$(1) -o $@ $(4) $(2) 
+@$(1) -o $@ $(4) $(2)
 endef
 
 # prototype: make_common_rules(target, cflags_extra)
@@ -12,25 +12,31 @@ $(1)_INC_DIR := $(1)/include
 $(1)_OBJ_DIR := obj/$(1)
 
 $(1)_CFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.c")
+$(1)_CXXFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.cc")
 $(1)_SFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.S")
 $(1)_HSFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hs")
 $(1)_HCFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hc")
 
 $(1)_COBJS := $$(patsubst $$($(1)_SRC_DIR)%.c,$$($(1)_OBJ_DIR)%.o,$$($(1)_CFILES))
+$(1)_CXXOBJS := $$(patsubst $$($(1)_SRC_DIR)%.cc,$$($(1)_OBJ_DIR)%.o,$$($(1)_CXXFILES))
 $(1)_SOBJS := $$(patsubst $$($(1)_SRC_DIR)%.S,$$($(1)_OBJ_DIR)%.o,$$($(1)_SFILES))
 $(1)_HSOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hs,$$($(1)_OBJ_DIR)%.o,$$($(1)_HSFILES))
 $(1)_HCOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hc,$$($(1)_OBJ_DIR)%.o,$$($(1)_HCFILES))
-$(1)_OBJS := $$($(1)_SOBJS) $$($(1)_COBJS) $$($(1)_HCOBJS) $$($(1)_HSOBJS)
+$(1)_OBJS := $$($(1)_SOBJS) $$($(1)_COBJS) $$($(1)_CXXOBJS) $$($(1)_HCOBJS) $$($(1)_HSOBJS)
 
 $(1)_BIN := $$($(1)_OBJ_DIR)/$(1)
 
 $(1)_CFLAGS = $(CFLAGS) -I$$($(1)_INC_DIR) $(2)
+$(1)_CXXFLAGS = $(CFLAGS) -I$$($(1)_INC_DIR) $(2)
 $(1)_ASFLAGS = -m32 -MMD -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR)
 $(1)_HSFLAGS = -c -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp
 $(1)_HCFLAGS = -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR) -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.c
 	$$(call make_command, $(CC), $$($(1)_CFLAGS), cc $$<, $$<)
+
+$$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.cc
+	$$(call make_command, $(CXX), $$($(1)_CXXFLAGS), cxx $$<, $$<)
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.S
 	$$(call make_command, $(CC), $$($(1)_ASFLAGS), as $$<, $$<)
