--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -22,7 +22,7 @@ $(1)_CXXOBJS := $$(patsubst $$($(1)_SRC_DIR)%.cc,$$($(1)_OBJ_DIR)%.o,$$($(1)_CXX
 $(1)_SOBJS := $$(patsubst $$($(1)_SRC_DIR)%.S,$$($(1)_OBJ_DIR)%.o,$$($(1)_SFILES))
 $(1)_HSOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hs,$$($(1)_OBJ_DIR)%.o,$$($(1)_HSFILES))
 $(1)_HCOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hc,$$($(1)_OBJ_DIR)%.o,$$($(1)_HCFILES))
-$(1)_OBJS := $$($(1)_SOBJS) $$($(1)_COBJS) $$($(1)_CXXOBJS) $$($(1)_HCOBJS) $$($(1)_HSOBJS)
+$(1)_OBJS := $$($(1)_CXXOBJS) $$($(1)_HSOBJS) $$($(1)_COBJS) $$($(1)_HCOBJS) $$($(1)_SOBJS)
 
 $(1)_BIN := $$($(1)_OBJ_DIR)/$(1)
 
