change makefile to make uniform output

--- a/lib-common/Makefile.part
+++ b/lib-common/Makefile.part
@@ -1,10 +1,11 @@
 # This file will be included by the Makefile under the project directory.
 
 FLOAT_OBJ := $(FLOAT:.a=.o)
+FLOAT_CFLAGS := -c -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-protector
 
-$(FLOAT): $(FLOAT_OBJ)
-	ar r $(FLOAT) $(FLOAT_OBJ)
+$(FLOAT): % : $(FLOAT_OBJ)
+	$(call make_command, @ar r, , ar $<, $^)
 
-$(FLOAT_OBJ): $(LIB_COMMON_DIR)/FLOAT.c
-	mkdir -p obj/$(LIB_COMMON_DIR)
-	$(CC) -c -o $(FLOAT_OBJ) $(LIB_COMMON_DIR)/FLOAT.c -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-protector
+$(FLOAT_OBJ): % : $(LIB_COMMON_DIR)/FLOAT.c
+	@mkdir -p obj/$(LIB_COMMON_DIR)
+	$(call make_command, $(CC), $(FLOAT_CFLAGS), $(CC) $<, $^)
