update makefile to uniform

--- a/lib-common/Makefile.part
+++ b/lib-common/Makefile.part
@@ -8,4 +8,4 @@ $(FLOAT): % : $(FLOAT_OBJ)
 
 $(FLOAT_OBJ): % : $(LIB_COMMON_DIR)/FLOAT.c
 	@mkdir -p obj/$(LIB_COMMON_DIR)
-	$(call make_command, $(CC), $(FLOAT_CFLAGS), $(CC) $<, $^)
+	$(call make_command, $(CC), $(FLOAT_CFLAGS), cc $<, $^)
