--- a/testcase/Makefile.part
+++ b/testcase/Makefile.part
@@ -4,12 +4,13 @@ testcase_CFLAGS_EXTRA := -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-prot
 $(eval $(call make_common_rules,testcase,$(testcase_CFLAGS_EXTRA)))
 
 # redefine testcase_BIN
-testcase_BIN := $(testcase_COBJS:.o=)
+testcase_BIN := $(testcase_COBJS:.o=) $(testcase_OBJ_DIR)/mov $(testcase_OBJ_DIR)/instrs
+testcase_CBIN := $(testcase_COBJS:.o=)
 testcase_START_OBJ := $(testcase_OBJ_DIR)/start.o
-testcase_LDFLAGS := -m elf_i386 -e start -Ttext=0x00100000 -lnenwlib
+testcase_LDFLAGS := -m elf_i386 -e start -Ttext=0x00100000
 
-$(testcase_BIN): % : $(testcase_START_OBJ) %.o $(FLOAT) $(NEWLIBC)
-	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
+$(testcase_CBIN): % : $(testcase_START_OBJ) %.o $(FLOAT) $(NEWLIBC)
+	$(call make_command, $(LD), $(testcase_LDFLAGS) -lnewlib, ld $@, $^)
 	@objdump -d $@ > $@.txt
 
 $(testcase_OBJ_DIR)/mov: % : %.o
