--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -30,7 +30,7 @@ $(1)_CFLAGS = $(CFLAGS) -I$$($(1)_INC_DIR) $(2)
 $(1)_CXXFLAGS = -std=c++14 -fno-exceptions $(CFLAGS) -I$$($(1)_INC_DIR) $(2)
 $(1)_ASFLAGS = -m32 -MMD -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR)
 $(1)_HSFLAGS = -c -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp
-$(1)_HCFLAGS = -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR) -no-hs-main -optc-O -debug -hidir /tmp -stubdir /tmp
+$(1)_HCFLAGS = -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR) -no-hs-main -optc-O3 -debug -hidir /tmp -stubdir /tmp
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.c
 	$$(call make_command, $(CC), $$($(1)_CFLAGS), cc $$<, $$<)
