--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,7 +1,7 @@
-nemu_CFLAGS_EXTRA := -ggdb3 -pg
+nemu_CFLAGS_EXTRA := -ggdb3 #-pg
 $(eval $(call make_common_rules,nemu,$(nemu_CFLAGS_EXTRA)))
 
-nemu_LDFLAGS := -lreadline -package parsec -lubsan -lstdc++ -optl-flto -optl-pg
+nemu_LDFLAGS := -lreadline -package parsec -lubsan -lstdc++ -optl-flto #-optl-pg
 
 $(nemu_BIN): $(nemu_OBJS)
 	$(call make_command, $(GHC), -no-hs-main $(nemu_LDFLAGS), ld $@, $^)
