--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -5,7 +5,7 @@ define make_command
 @$(1) -o $@ $(4) $(2)
 endef
 
-# prototype: make_common_rules(target, cflags_extra)
+# prototype: make_common_rules(target)
 define make_common_rules
 $(1)_SRC_DIR := $(1)/src
 $(1)_INC_DIR := $(1)/include
@@ -15,22 +15,20 @@ $(1)_CFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.c")
 $(1)_CXXFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.cc")
 $(1)_SFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.S")
 $(1)_HSFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hs")
-$(1)_HCFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hc")
 
 $(1)_COBJS := $$(patsubst $$($(1)_SRC_DIR)%.c,$$($(1)_OBJ_DIR)%.o,$$($(1)_CFILES))
 $(1)_CXXOBJS := $$(patsubst $$($(1)_SRC_DIR)%.cc,$$($(1)_OBJ_DIR)%.o,$$($(1)_CXXFILES))
 $(1)_SOBJS := $$(patsubst $$($(1)_SRC_DIR)%.S,$$($(1)_OBJ_DIR)%.o,$$($(1)_SFILES))
 $(1)_HSOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hs,$$($(1)_OBJ_DIR)%.o,$$($(1)_HSFILES))
-$(1)_HCOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hc,$$($(1)_OBJ_DIR)%.o,$$($(1)_HCFILES))
+
 $(1)_OBJS := $$($(1)_CXXOBJS) $$($(1)_HSOBJS) $$($(1)_COBJS) $$($(1)_HCOBJS) $$($(1)_SOBJS)
 
 $(1)_BIN := $$($(1)_OBJ_DIR)/$(1)
 
-$(1)_CFLAGS = $(CFLAGS) -I$$($(1)_INC_DIR) $(2)
-$(1)_CXXFLAGS = -std=c++14 -fno-exceptions $(CFLAGS) -I$$($(1)_INC_DIR) $(2) -Ofast -funroll-loops -flto
-$(1)_ASFLAGS = -m32 -MMD -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR)
-$(1)_HSFLAGS = -c -no-hs-main -optc-O3 -debug -hidir /tmp -stubdir /tmp -optc-funroll-loops -optc-flto
-$(1)_HCFLAGS = -c -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR) -no-hs-main -optc-O3 -debug -hidir /tmp -stubdir /tmp
+$(1)_CFLAGS = $(CFLAGS) $$($(1)_CFLAGS_EXTRA) -I$$($(1)_INC_DIR)
+$(1)_CXXFLAGS = $(CXXFLAGS) $$($(1)_CXXFLAGS_EXTRA) -I$$($(1)_INC_DIR)
+$(1)_ASFLAGS = $(ASFLAGS) $$($(1)_ASFLAGS_EXTRA) -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR)
+$(1)_HSFLAGS = $(HSFLAGS) $$($(1)_HSFLAGS_EXTRA) -I$$($(1)_INC_DIR) -hidir $(1)_OBJ_DIR/HSInterface -stubdir /tmp
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.c
 	$$(call make_command, $(CC), $$($(1)_CFLAGS), cc $$<, $$<)
@@ -43,9 +41,6 @@ $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.S
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.hs
 	$$(call make_command, $(GHC), $$($(1)_HSFLAGS), ghc $$<, $$<)
-
-$$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.hc
-	$$(call make_command, $(GHC), $$($(1)_HCFLAGS), ghc $$<, $$<)
 
 -include $$($(1)_OBJS:.o=.d)
 endef
