--- a/testcase/Makefile.part
+++ b/testcase/Makefile.part
@@ -1,11 +1,13 @@
 testcase_CFLAGS_EXTRA := -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-protector \
 						-I$(LIB_COMMON_DIR) -I$(NEWLIBC_DIR)/include
 
-$(eval $(call make_common_rules,testcase,$(testcase_CFLAGS_EXTRA)))
+$(eval $(call make_common_rules,testcase))
 
 # redefine testcase_BIN
-testcase_BIN := $(testcase_COBJS:.o=) $(testcase_OBJ_DIR)/mov $(testcase_OBJ_DIR)/instrs
 testcase_CBIN := $(testcase_COBJS:.o=)
+testcase_SBIN := $(filter-out $(testcase_OBJ_DIR)/start,$(testcase_SOBJS:.o=))
+testcase_BIN := $(testcase_CBIN) $(testcase_SBIN)
+
 testcase_START_OBJ := $(testcase_OBJ_DIR)/start.o
 testcase_LDFLAGS := -m elf_i386 -e start -Ttext=0x00100000
 
@@ -13,10 +15,6 @@ $(testcase_CBIN): % : $(testcase_START_OBJ) %.o $(FLOAT) $(NEWLIBC)
 	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
 	@objdump -d $@ > $@.txt
 
-$(testcase_OBJ_DIR)/mov: % : %.o
-	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
-	@objdump -d $@ > $@.txt
-
-$(testcase_OBJ_DIR)/instrs: % : %.o
+$(testcase_SBIN): % : %.o
 	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
 	@objdump -d $@ > $@.txt
