--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -6,7 +6,7 @@ $(eval $(call make_common_rules,nemu))
 nemu_LDFLAGS := -no-hs-main -lreadline -package parsec -lubsan -lstdc++ -optl-flto #-optl-pg
 
 $(nemu_BIN): $(nemu_OBJS)
-	$(call make_command, $(GHC), $(nemu_LDFLAGS), ld $@, $^)
+	$(call make_command, $(HC), $(nemu_LDFLAGS), ld $@, $^)
 	$(call git_commit, "compile NEMU")
 
 
