--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,10 +1,10 @@
 nemu_CFLAGS_EXTRA := -ggdb3 -Ofast -funroll-loops -flto -pg
 nemu_CXXFLAGS_EXTRA := -ggdb3 -Ofast -funroll-loops -flto -pg
-nemu_HCFLAGS_EXTRA := -prof -O
+nemu_HCFLAGS_EXTRA := -prof -fprof-auto -O
 
 $(eval $(call make_common_rules,nemu))
 
-nemu_LDFLAGS := -no-hs-main -lreadline -package parsec -lubsan -lstdc++ -optl-flto -optl-pg
+nemu_LDFLAGS := -prof -fprof-auto -no-hs-main -lreadline -package parsec -lubsan -lstdc++ -optl-flto -optl-pg
 
 $(nemu_BIN): $(nemu_OBJS)
 	$(call make_command, $(HC), $(nemu_LDFLAGS), ld $@, $^)
