--- a/testcase/Makefile.part
+++ b/testcase/Makefile.part
@@ -1,4 +1,4 @@
-testcase_CFLAGS_EXTRA := -m32 -fno-builtin -fno-stack-protector \
+testcase_CFLAGS_EXTRA := -m32 -fno-builtin -fno-stack-protector -msoft-float -mno-sse \
 						-I$(LIB_COMMON_DIR) -I$(NEWLIBC_DIR)/include
 
 $(eval $(call make_common_rules,testcase))
