--- a/config/Makefile.build
+++ b/config/Makefile.build
@@ -15,13 +15,15 @@ $(1)_CFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.c")
 $(1)_CXXFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.cc")
 $(1)_SFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.S")
 $(1)_HCFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.hs")
+$(1)_RSFILES := $$(shell find $$($(1)_SRC_DIR) -name "*.rs")
 
 $(1)_COBJS := $$(patsubst $$($(1)_SRC_DIR)%.c,$$($(1)_OBJ_DIR)%.o,$$($(1)_CFILES))
 $(1)_CXXOBJS := $$(patsubst $$($(1)_SRC_DIR)%.cc,$$($(1)_OBJ_DIR)%.o,$$($(1)_CXXFILES))
 $(1)_SOBJS := $$(patsubst $$($(1)_SRC_DIR)%.S,$$($(1)_OBJ_DIR)%.o,$$($(1)_SFILES))
 $(1)_HCOBJS := $$(patsubst $$($(1)_SRC_DIR)%.hs,$$($(1)_OBJ_DIR)%.o,$$($(1)_HCFILES))
+$(1)_RSOBJS := $$(patsubst $$($(1)_SRC_DIR)%.rs,$$($(1)_OBJ_DIR)%.o,$$($(1)_RSFILES))
 
-$(1)_OBJS := $$($(1)_HCOBJS) $$($(1)_CXXOBJS) $$($(1)_COBJS) $$($(1)_SOBJS)
+$(1)_OBJS := $$($(1)_HCOBJS) $$($(1)_CXXOBJS) $$($(1)_COBJS) $$($(1)_SOBJS) $$($(1)_RSOBJS)
 
 $(1)_BIN := $$($(1)_OBJ_DIR)/$(1)
 
@@ -29,6 +31,7 @@ $(1)_CFLAGS = $(CFLAGS) $$($(1)_CFLAGS_EXTRA) -I$$($(1)_INC_DIR)
 $(1)_CXXFLAGS = $(CXXFLAGS) $$($(1)_CXXFLAGS_EXTRA) -I$$($(1)_INC_DIR)
 $(1)_ASFLAGS = $(ASFLAGS) $$($(1)_ASFLAGS_EXTRA) -I$$($(1)_INC_DIR) -I$(LIB_COMMON_DIR)
 $(1)_HCFLAGS = $(HCFLAGS) $$($(1)_HCFLAGS_EXTRA) -I$$($(1)_INC_DIR) -hidir $$($(1)_OBJ_DIR)/haskell -stubdir /tmp
+$(1)_RSFLAGS = $(RSFLAGS) $$($(1)_RSFLAGS_EXTRA)
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.c
 	$$(call make_command, $(CC), $$($(1)_CFLAGS), cc $$<, $$<)
@@ -41,6 +44,9 @@ $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.S
 
 $$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.hs
 	$$(call make_command, $(HC), $$($(1)_HCFLAGS), hc $$<, $$<)
+
+$$($(1)_OBJ_DIR)%.o: $$($(1)_SRC_DIR)%.rs
+	$$(call make_command, $(RUSTC), $$($(1)_RSFLAGS), rustc $$<, $$<)
 
 -include $$($(1)_OBJS:.o=.d)
 endef
