--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,5 +1,5 @@
-nemu_CFLAGS_EXTRA := -ggdb3 -DDEBUG #-Ofast -funroll-loops -flto
-nemu_CXXFLAGS_EXTRA := -ggdb3 -DDEBUG #-Ofast -funroll-loops -flto -DDEBUG
+nemu_CFLAGS_EXTRA := -ggdb3 -DDEBUG -fsanitize=undefined #-Ofast -funroll-loops -flto
+nemu_CXXFLAGS_EXTRA := -ggdb3 -DDEBUG -fsanitize=undefined #-Ofast -funroll-loops -flto -DDEBUG
 nemu_HCFLAGS_EXTRA := -O -optc-flto
 nemu_RUSTSTD := obj/nemu/libruststd.a
 
