page works the first time

--- a/testcase/Makefile.part
+++ b/testcase/Makefile.part
@@ -13,7 +13,7 @@ testcase_BIN := $(testcase_CBIN) $(testcase_SBIN) $(testcase_RSBIN)
 
 testcase_START_OBJ := $(testcase_OBJ_DIR)/start.o
 testcase_START_RS_OBJ := $(testcase_OBJ_DIR)/start-rs.o
-testcase_LDFLAGS := -m elf_i386 -e main -Ttext-segment=0x00800000
+testcase_LDFLAGS := -m elf_i386 -e main #-Ttext-segment=0x00800000
 
 $(testcase_CBIN): % : $(testcase_START_OBJ) %.o $(FLOAT) $(NEWLIBC)
 	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
