--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,5 +1,5 @@
 nemu_CFLAGS_EXTRA := -Ofast -funroll-loops -flto
-nemu_CXXFLAGS_EXTRA := -Ofast -funroll-loops -flto
+nemu_CXXFLAGS_EXTRA := $(nemu_CFLAGS_EXTRA)
 nemu_HCFLAGS_EXTRA := -O -optc-flto
 nemu_RUSTSTD := obj/nemu/libruststd.a
 
