--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 *.*
 *
-!*/
-!Makefile*
-!*.[cSh]
-!*.hs
-!*.hc
-!*.cc
-!*.hh
-!*.tcc
-!*.rs
-!test.sh
-!.gitignore
-!README.md
-!lib-common/newlib/libc.a
-!lib-common/libcore.a
-!kernel/src/memory/mm_malloc.o
+(?!*/)
+(?!Makefile*)
+(?!*.[cSh])
+(?!*.hs)
+(?!*.hc)
+(?!*.cc)
+(?!*.hh)
+(?!*.tcc)
+(?!*.rs)
+(?!test.sh)
+(?!.gitignore)
+(?!README.md)
+(?!lib-common/newlib/libc.a)
+(?!lib-common/libcore.a)
+(?!kernel/src/memory/mm_malloc.o)
