start backport bugfixes to 2.4.0

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 !*.hc
 !*.cc
 !*.hh
+!*.tcc
+!*.rs
 !test.sh
 !.gitignore
 !README.md
 !lib-common/newlib/libc.a
+!lib-common/libcore.a
 !kernel/src/memory/mm_malloc.o
