--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,15 +1,14 @@
-nemu_CFLAGS_EXTRA := -ggdb3 -Ofast -funroll-loops -flto -DDEBUG
-nemu_CXXFLAGS_EXTRA := -ggdb3 -Ofast -funroll-loops -flto -DDEBUG
-nemu_HCFLAGS_EXTRA := -O
+nemu_CFLAGS_EXTRA := -Ofast -funroll-loops -flto -DDEBUG
+nemu_CXXFLAGS_EXTRA := $(nemu_CFLAGS_EXTRA)
+nemu_HCFLAGS_EXTRA := -O -optc-flto
 
 $(eval $(call make_common_rules,nemu))
 
-nemu_LDFLAGS := -no-hs-main -lreadline -package parsec -lstdc++ -optl-flto
+nemu_LDFLAGS := -no-hs-main -lpthread -lreadline -package parsec -lstdc++ -lSDL -optl-flto
 
-$(nemu_BIN): $(nemu_OBJS)
+$(nemu_BIN): $(nemu_OBJS) $(nemu_RUSTSTD)
 	$(call make_command, $(HC), $(nemu_LDFLAGS), ld $@, $^)
 	$(call git_commit, "compile NEMU")
-
 
 ##### rules for generating some preprocessing results #####
 
