--- a/testcase/Makefile.part
+++ b/testcase/Makefile.part
@@ -1,15 +1,12 @@
 testcase_CFLAGS_EXTRA := -m32 -fno-builtin -fno-stack-protector -msoft-float -mno-sse \
 						-I$(LIB_COMMON_DIR) -I$(NEWLIBC_DIR)/include
 
-testcase_RSFLAGS_EXTRA := --target i686-unknown-linux-gnu -C target-feature=-avx,-sse
-
 $(eval $(call make_common_rules,testcase))
 
 # redefine testcase_BIN
 testcase_CBIN := $(testcase_COBJS:.o=)
 testcase_SBIN := $(filter-out $(testcase_OBJ_DIR)/start,$(filter-out $(testcase_OBJ_DIR)/start-rs,$(testcase_SOBJS:.o=)))
-testcase_RSBIN := $(testcase_RSOBJS:.o=)
-testcase_BIN := $(testcase_CBIN) $(testcase_SBIN) $(testcase_RSBIN)
+testcase_BIN := $(testcase_CBIN) $(testcase_SBIN)
 
 testcase_START_OBJ := $(testcase_OBJ_DIR)/start.o
 testcase_START_RS_OBJ := $(testcase_OBJ_DIR)/start-rs.o
@@ -23,6 +20,3 @@ $(testcase_SBIN): % : %.o
 	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
 	@objdump -d $@ > $@.txt
 
-$(testcase_RSBIN): % : $(testcase_START_RS_OBJ) %.o $(FLOAT) $(RSCORE) $(NEWLIBC)
-	$(call make_command, $(LD), $(testcase_LDFLAGS), ld $@, $^)
-	@objdump -d $@ > $@.txt
