--- a/lib-common/Makefile.part
+++ b/lib-common/Makefile.part
@@ -1,7 +1,7 @@
 # This file will be included by the Makefile under the project directory.
 
 FLOAT_OBJ := $(FLOAT:.a=.o)
-FLOAT_CFLAGS := -c -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-protector
+FLOAT_CFLAGS := -c -m32 -msoft-float -mno-sse -fno-builtin -fno-stack-protector -std=gnu11
 
 $(FLOAT): % : $(FLOAT_OBJ)
 	$(call make_command, @ar r, , ar $<, $^)
@@ -9,9 +9,3 @@ $(FLOAT): % : $(FLOAT_OBJ)
 $(FLOAT_OBJ): % : $(LIB_COMMON_DIR)/FLOAT.c
 	@mkdir -p obj/$(LIB_COMMON_DIR)
 	$(call make_command, $(CC), $(FLOAT_CFLAGS), cc $<, $^)
-
-#RSCORE_RSFLAGS := --target=i686-unknown-linux-gnu
-
-#$(RSCORE): % : $(LIB_COMMON_DIR)/core.rs
-#	@mkdir -p obj/$(LIB_COMMON_DIR)
-#	$(call make_command, $(RUSTC), $(RSCORE_RSFLAGS), rustc $<, $^)
