no sdl before PA4

--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -4,7 +4,7 @@ nemu_HCFLAGS_EXTRA := -O -optc-flto
 
 $(eval $(call make_common_rules,nemu))
 
-nemu_LDFLAGS := -no-hs-main -lpthread -lreadline -package parsec -lstdc++ -lSDL -optl-flto
+nemu_LDFLAGS := -no-hs-main -lpthread -lreadline -package parsec -lstdc++ -optl-flto
 
 $(nemu_BIN): $(nemu_OBJS) $(nemu_RUSTSTD)
 	$(call make_command, $(HC), $(nemu_LDFLAGS), ld $@, $^)
