--- a/nemu/Makefile.part
+++ b/nemu/Makefile.part
@@ -1,6 +1,6 @@
-nemu_CFLAGS_EXTRA := -Ofast -funroll-loops -flto -fno-strict-aliasing -DDEBUG
+nemu_CFLAGS_EXTRA := -Ofast -funroll-loops -flto -march=native -DDEBUG
 nemu_CXXFLAGS_EXTRA := $(nemu_CFLAGS_EXTRA)
-nemu_HCFLAGS_EXTRA := -O -optc-flto
+nemu_HCFLAGS_EXTRA := -O -optc-flto -optc-march=native
 
 $(eval $(call make_common_rules,nemu))
 
